Fixed flickering of tile animations.
Adding setTimeout(..., 0) somehow fixed the flickering. Investigate more
later.

--- a/src/styles/site.scss
+++ b/src/styles/site.scss
@@ -94,8 +94,6 @@ code {
 
 @mixin tile($background-color: initial, $hover-background-color: $background-color, $color: initial, $width: initial, $height: initial, $margin: initial, $border: initial, $border-radius: initial, $font-size: inherit, $font-family: inherit, $font-weight: inherit, $hover-border: initial, $hover-color: initial) {
   position: relative;
-  //position: absolute !important;
-  //left: 0 !important;
   font-size: $font-size;
   cursor: pointer;
   font-family: $font-family;
@@ -110,11 +108,11 @@ code {
   transition: background-color $tile-transition-duration ease-out;
   transition: font-size $tile-transition-duration ease-in-out;
 
-  &:hover {
-    background-color: $hover-background-color;
-    color: $hover-color;
-    border: $hover-border;
-  }
+  //&:hover {
+  //  background-color: $hover-background-color;
+  //  color: $hover-color;
+  //  border: $hover-border;
+  //}
 }
 
 @mixin tile-inner($background-color, $color) {
@@ -210,10 +208,10 @@ code {
     );
   }
 
-  &:hover .number {
-    font-size: $tile-hover-font-size;
-    color: inherit;
-  }
+  //&:hover .number {
+  //  font-size: $tile-hover-font-size;
+  //  color: inherit;
+  //}
 
   &.swappable {
     background-color: $tile-active-background;
